fixed bug with about section text overflow

--- a/style/style.css
+++ b/style/style.css
@@ -47,8 +47,8 @@ p {
 
 .about {
 	width: 100%;
-	height: 500px;
 	padding: 150px 100px;
+
 }
 .about h2 {
 	margin-top: 5px;
